--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -7,17 +7,17 @@
 name: NanoPi R1S-H5 OpenWrt Autobuild
 
 on:
-  release:
-    types: [published]
-  push:
-    branches:
-      - master
+  # release:
+  #   types: [published]
+  # push:
+  #   branches:
+  #    - master
     paths:
       - ".config"
   #  schedule:
   #    - cron: 0 8 * * 5
-  watch:
-    types: [started]
+  # watch:
+  #  types: [started]
 
 jobs:
   build:
