--- a/.github/workflows/R1S-H5-1.yml
+++ b/.github/workflows/R1S-H5-1.yml
@@ -3,9 +3,9 @@
 name: NanoPi-R1S H5 非官方内核-原版h5.xml
 
 on:
-  # push:
-  #   branches: 
-  #     - master
+  push:
+    branches: 
+      - master
   # schedule:
   #     - cron: 0 8 * * 5
   release:
