--- a/.github/workflows/R1S-H5-1.yml
+++ b/.github/workflows/R1S-H5-1.yml
@@ -1,6 +1,15 @@
 #NanoPi-R1S H5 FriendlyWrt Build
+# wget https://raw.githubusercontent.com/camino13/NanoPi-R1S/master/h5.xml  非官方内核
+# ----------------------------------------------------------------------------------
+#          wget https://raw.githubusercontent.com/ggsjj/NanoPi-R1S-Build-By-Actions/master/source_xml/h5_19.07.xml
+#          cp h5_19.07.xml h5.xml
+#          rm -rf ./h5_19.07.xml
+#             官方内核
+#
+#--------------------------------------------------
+#
 
-name: NanoPi-R1S H5 非官方内核-原版h5.xml
+name: NanoPi-R1S H5 官方内核-原版h5.xml
 
 on:
   push:
@@ -46,7 +55,9 @@ jobs:
           cd friendlywrt-h5
           cd .repo/manifests
           rm -f ./h5.xml
-          wget https://raw.githubusercontent.com/camino13/NanoPi-R1S/master/h5.xml
+          wget https://raw.githubusercontent.com/ggsjj/NanoPi-R1S-Build-By-Actions/master/source_xml/h5_19.07.xml
+          cp h5_19.07.xml h5.xml
+          rm -rf ./h5_19.07.xml
           repo sync -c  --no-clone-bundle
 
       - name: Merge LEDE
