--- a/.github/workflows/h5.yml
+++ b/.github/workflows/h5.yml
@@ -9,9 +9,9 @@ name: NanoPi R1S-H5 OpenWrt Autobuild
 on:
   release:
     types: [published]
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
   #   paths:
   #     - ".config"
   #  schedule:
